got index to render with styles

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,29 @@
-<h1>HELLER</h1>
+ <div class="book-card">
+
+                <div class="card-title">
+                    <h2 class="bookCardTitle">Title:</h2>
+                    <h2 class="card-data">I love Phoebee</h>
+                </div>
+                
+                <div class="card-title">
+                    <h2 class="bookCardAuthur">Authur:</h2>
+                    <h2 class="card-data">Aaron Rodi</h2>
+                </div>
+
+                <div class="card-title">
+                    <h2 class="bookCardPages">Pages:</h2>
+                    <h2 class="card-data">666</h2>
+                </div>
+
+                <div class="card-title">
+                    <h2 class="bookIsRead">Finished Reading?</h2>
+                    <h2 class="card-data">Yes</h2>
+                </div>
+
+                <div class="edit-delete">
+                    
+                    <button class="lib-btn">Edit</button>
+                    <button class="lib-btn">Delete</button>
+                </div>
+
+     </div>
