--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,8 +3,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Signika+Negative&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=PT+Sans+Narrow&family=Signika+Negative&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,100&family=Permanent+Marker&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bayon&family=Exo+2:ital,wght@1,100&family=Permanent+Marker&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Document</title>
+    <title>Digital Book Library</title>
   </head>
   <body>
 
@@ -21,7 +33,7 @@
 
     </header>
 
-    <main>
+    <main class="book-library">
           
         {{{body}}}
 
