minor UI changes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="card-title">
-                    <h2 class="bookIsRead">Finished Reading?</h2>
+                    <h2 class="bookIsRead">Status:</h2>
                     <h2 class="card-data">{{isRead}}</h2>
                 </div>
 
