--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,13 +24,9 @@
 
       <h1 id="main-heading"> My Library </h1>
 
-      <h2 id="secondary-heading"> Add Book </h2>
-
-      <button id="open-addBook-modal">Open</button>
-      <br />
-
-      <button id="open-addBook-modal" class="clearBtn">Clear</button>
-
+      <a href="/new"><button id="open-addBook-modal">Add Book</button>
+      <br /></a>
+      
     </header>
 
     <main class="book-library">
