added edit route (incomplete), need to fix render bug

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,9 +23,9 @@
                 </div>
 
                 <div class="edit-delete">
-                    
-                    <button class="lib-btn">Edit</button>
 
+                   <a href="/edit/{{title}}"><button class="lib-btn">Edit</button></a> 
+                
                    <form action="/{{title}}?_method=DELETE"  method="POST">
                         <button class="lib-btn">Delete</button>
                    </form> 
