need to fix edit render bug. but IM BEING RUSHED

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,9 +24,9 @@
 
                 <div class="edit-delete">
 
-                   <a href="/edit/{{title}}"><button class="lib-btn">Edit</button></a> 
+                   <a href="/edit/{{_id}}"><button class="lib-btn">Edit</button></a> 
                 
-                   <form action="/{{title}}?_method=DELETE"  method="POST">
+                   <form action="/{{_id}}?_method=DELETE"  method="POST">
                         <button class="lib-btn">Delete</button>
                    </form> 
                     
