--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,63 +1,19 @@
-
-div class="modal-container" id="main-modal-container">
+ {{#each book}}
+<div class="modal-container" id="main-modal-container">
   <div class="modal">
     <div class="modal-content">
       <a href="/"><span id="close-modal-btn">&#88</span></a>
       <div class="form">
-        {{#each book}}
-        <form action="/" method="POST">
-          <button id="add-Book">Add Book</button>
-          <!-- Title Input -->
-          <div class="book-input" id="title-input">
-            <label for="title-input" class="input-label">Title</label>
-            <input
-              type="text"
-              name="title"
-              value="'title"
-              class="form-input title"
-              id="title-input"
-            />
-          </div>
-
-          <!-- Authur Input -->
-          <div class="book-input" id="authur-input">
-            <label for="authur-input" class="input-label">Author</label>
-            <input
-              type="text"
-              name="authur"
-              value="authur"
-              class="form-input authur"
-              id="authur-input"
-            />
-          </div>
-
-          <!-- Page Number Input -->
-          <div class="page-input" id="page-input">
-            <label for="page-number-input" class="input-label">Number of Pages</label>
-            <input
-              type="number"
-              name="pages"
-              value="pages"
-              class="form-input page"
-              id="page-number-input"
-            />
-          </div>
-
-          <!-- Checkbox for Read or Not -->
-          <div class="book-input-radio" id="checkbox-input">
-            <p class="input-label">Have you read the book?</p>
-
-            <select class="select" name="isRead" required>
-              <option value="Finished">Yes</option>
-              <option value="Not Finished">No</option>
-            </select>
-          </div>
+       
+        <form action="/edit{{id}}" method="POST">
+        {{> form}}
         </form>
-        {{/each}}
+   
+        
       </div>
     </div>
   </div>
 </div>
 
-
+     {{/each}}
 
