got edit page to render correctly with data

--- a/views/partials/form.hbs
+++ b/views/partials/form.hbs
@@ -1,5 +1,5 @@
 
-          <button id="add-Book">Add Book</button>
+          <button id="add-Book">Submit</button>
           <!-- Title Input -->
          
           <div class="book-input" id="title-input">
