edit route working. CRUD complete

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -5,7 +5,7 @@
       <a href="/"><span id="close-modal-btn">&#88</span></a>
       <div class="form">
        
-        <form action="/edit{{_id}}" method="POST">
+        <form action="/edit/{{_id}}?_method=PUT" method="POST">
         {{> form}}
         </form>
    
