--- a/views/partials/form.hbs
+++ b/views/partials/form.hbs
@@ -10,6 +10,7 @@
               value="{{title}}"
               class="form-input title"
               id="title-input"
+              required
             />
           </div>
 
@@ -22,6 +23,7 @@
               value="{{authur}}"
               class="form-input authur"
               id="authur-input"
+              required
             />
           </div>
 
@@ -34,6 +36,7 @@
               value="{{pages}}"
               class="form-input page"
               id="page-number-input"
+              required
             />
           </div>
 
